<resources>
    <string name="app_name">OpenWeather</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_now">Enable Now</string>
    <string name="open_weather_api_key"></string>
    <string name="maps_api_key"></string>
    <string name="gps_desc">Enable GPS to find your current location.</string>
    <string name="min">min</string>
    <string name="current">Current</string>
    <string name="max">max</string>
    <string name="current_place">Your current location</string>
    <string name="map">Map</string>
    <string name="try_again">Try Again</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_location">search location</string>
    <string name="weather_icon_desc">weather type</string>
    <string name="last_updated">Last updated: %1$s</string>
    <string name="user_location">%1$s, %2$s</string>
    <string name="favorites">Favorite places</string>
    <string name="search_places">Search another location</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorite_places_title">Favorite Places</string>
    <string name="favorites_empty_state">You have no favorite places saved. \nAdd new places now</string>
    <string name="home_empty_state">No weather data loaded</string>
    <string name="fav_location">%1$s, %2$s</string>
    <string name="search_hint">Search for a location</string>

    <!--  Error responses  -->
    <string name="no_internet_connection">No internet connection, try again</string>
    <string name="app_update_needed">You need to update the app and try again</string>
    <string name="problem_processing_request">There was a problem processing your request. Please try again</string>
    <string name="unable_to_connect">Network is unreachable, check your connection</string>
    <string name="internal_server_error">Internal server error, try again later.</string>
    <string name="service_unavailable">Service temporarily unavailable, try again later</string>
    <string name="no_server_response">There was a problem completing your request. Try again later.</string>

    <!--  Permissions error response  -->
    <string name="you_need_to_allow_location_permission">You need to allow location permission</string>
    <string name="enable_location_permissions">Enable location permissions or check your internet connection</string>

    <!--  db error response  -->
    <string name="add_to_favorites_success_message">Successfully added to favorites</string>
    <string name="already_exists_in_favorites_message">Already exists in your favorites</string>
    <string name="empty_favorites_message">You don\'t have any favorite places saved</string>

    <string name="searching">Searching…🔎</string>
    <string name="fetching_weather">Getting weather info for %1$s</string>
    <string name="bottom_sheet_title">Current Weather For %1$s</string>
    <string name="bottom_sheet_button_text">Save to favorites</string>
    <string name="exit_message">Press back again to exit</string>

    <string name="favorites_list">Favorites List</string>
    <string name="favorites_map">Favorites Map</string>
</resources>