<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bottom_sheet_bg"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:id="@+id/bottom_sheet_bg"
        android:background="@drawable/rounded_top_bg"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/current_weather_layout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/forest_sunny"
            app:layout_constrainedHeight="true"
            app:layout_constraintHeight_percent=".4"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="16dp"
                android:singleLine="true"
                tools:ignore="SpeakableTextPresentCheck"
                tools:text="Nairobi CBD"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_temp"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias=".35"
                tools:text="15°" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/current_weather"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="@+id/current_temp"
                app:layout_constraintStart_toStartOf="@+id/current_temp"
                app:layout_constraintTop_toBottomOf="@+id/current_temp"
                tools:text="Sunny" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/last_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_updated"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/current_temp"
                app:layout_constraintStart_toStartOf="@+id/current_temp"
                app:layout_constraintTop_toBottomOf="@+id/current_weather"
                tools:text="Last updated: 2023-11-15 10:14" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/min_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/min_temperature_desc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/min_temperature_desc"
            app:layout_constraintTop_toBottomOf="@+id/current_weather_layout"
            tools:text="16°" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/min_temperature_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/min"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/current_temperature_desc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/min_temperature_value" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/current_temperature_desc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/current_temperature_desc"
            app:layout_constraintTop_toTopOf="@+id/min_temperature_value"
            tools:text="11°" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_temperature_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/max_temperature_desc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/min_temperature_desc"
            app:layout_constraintTop_toTopOf="@+id/min_temperature_desc" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/max_temperature_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/max_temperature_desc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/max_temperature_desc"
            app:layout_constraintTop_toTopOf="@+id/min_temperature_value"
            tools:text="19°" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/max_temperature_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/max"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/current_temperature_desc"
            app:layout_constraintTop_toTopOf="@+id/current_temperature_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_location"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/purple_200"
            app:backgroundTint="@color/purple_200"
            android:text="@string/bottom_sheet_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/min_temperature_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
