<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSunny"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="false"
    android:id="@+id/weather_layout"
    tools:context=".ui.home.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/current_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/forest_sunny"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_location"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:padding="16dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck"
            tools:text="Nairobi CBD"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_temp"
            style="@style/TextAppearance.MaterialComponents.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".35"
            tools:text="15°" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/current_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/current_temp"
            app:layout_constraintStart_toStartOf="@+id/current_temp"
            app:layout_constraintTop_toBottomOf="@+id/current_temp"
            tools:text="Sunny" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/last_updated_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/last_updated"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/current_temp"
            app:layout_constraintStart_toStartOf="@+id/current_temp"
            app:layout_constraintTop_toBottomOf="@+id/current_weather"
            tools:text="Last updated: 2023-11-15 10:14" />

        <ImageView
            android:id="@+id/tap_to_refresh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/last_updated_at"
            app:layout_constraintStart_toEndOf="@+id/last_updated_at"
            app:layout_constraintTop_toTopOf="@+id/last_updated_at"
            app:srcCompat="@drawable/baseline_refresh_36"
            app:tint="@color/white"
            android:contentDescription="@string/weather_icon_desc" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/min_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/min_temperature_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@+id/min_temperature_desc"
        app:layout_constraintTop_toBottomOf="@+id/current_weather_layout"
        tools:text="16°" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/min_temperature_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/min"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/current_temperature_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_temperature_value" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/current_temperature_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/current_temperature_desc"
        app:layout_constraintTop_toTopOf="@+id/min_temperature_value"
        tools:text="11°" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/current_temperature_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/max_temperature_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/min_temperature_desc"
        app:layout_constraintTop_toTopOf="@+id/min_temperature_desc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/max_temperature_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/max_temperature_desc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/max_temperature_desc"
        app:layout_constraintTop_toTopOf="@+id/min_temperature_value"
        tools:text="19°" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/max_temperature_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/max"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/current_temperature_desc"
        app:layout_constraintTop_toTopOf="@+id/current_temperature_desc" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_temperature_desc" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/weather_forecast"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/min_temperature_desc"
        tools:itemCount="5"
        tools:listitem="@layout/item_weather_forecast" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/favorite_places"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/outline_star_outline_24"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/weather_icon_desc" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loading_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay">

        <ProgressBar
            android:id="@+id/loading_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:indeterminateTint="@color/purple_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
